--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  adaptive_theme: ^3.2.1
 
 dev_dependencies:
   flutter_test:
